Added castle tileset suggest list.

--- a/ZAMN Editor/My Project/Resources.resx
+++ b/ZAMN Editor/My Project/Resources.resx
@@ -256,4 +256,10 @@
   <data name="Pyramid" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Suggest Lists\Pyramid.zsl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Castle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Suggest Lists\Castle.zsl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Office" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Suggest Lists\Office.zsl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
